# scorpion

./: README.md
docs/older/: run_differnt_nodes_separatly.md
gait_generator/: CMakeLists.txt  package.xml
gait_generator/include/gait_generator/: gait_generator.hpp
gait_generator/launch/: gait_generator.launch.py
gait_generator/scripts/: generate_leg_body_transforms.py
gait_generator/src/: gait_generator_node.cpp
gait_generator/src/gait_generator/: gait_generator.cpp
interfaces/limb_msgs/: CMakeLists.txt  package.xml
interfaces/limb_msgs/msg/: Pxyz.msg
joints_aggregator/: CMakeLists.txt  package.xml
joints_aggregator/config/: config.yaml
joints_aggregator/include/joints_aggregator/: joints_aggregator.hpp
joints_aggregator/launch/: joints_aggregator.launch.py
joints_aggregator/src/: joints_aggregator_node.cpp
joints_aggregator/src/joints_aggregator/: joints_aggregator.cpp
limb_kin_chain/: CMakeLists.txt  package.xml
limb_kin_chain/config/: limb_0.yaml
limb_kin_chain/launch/: limb_kin_chain.launch.py
limb_kin_chain/src/: limb_kin_chain_node_exe.cpp
penta_description/: CMakeLists.txt  package.xml
penta_description/config/: general_config.yaml  legs_body_transforms.yaml  limb_0_mdh.yaml  penta.rviz
penta_description/launch/: penta_description_simple.launch.py
penta_description/urdf/: penta.urdf.xacro  single_limb.urdf  single_limb.urdf.xacro
penta_i2c_actuators/: README.md  package.xml  setup.cfg  setup.py
penta_i2c_actuators/launch/: penta_i2c_actuators.launch.py
penta_i2c_actuators/penta_i2c_actuators/: penta_i2c_actuators_node.py
penta_pod/: CMakeLists.txt  README.md  package.xml
penta_pod/config/: limb_0.yaml
penta_pod/launch/: penta_pod.launch.py  penta_rviz.launch.py  penta_sim_rviz.launch.py  realhardware_bringup.launch.py
rpi4_hw_interface/: README.md
rpi4_hw_interface/scripts/: simple_limps_control_gui.py
scripts/: setup_i2c_on_raspberry_pi4.sh  setup_penta_workspace.sh  setup_service_penta_bringup_on_boot.sh
test_foot_pos/: CMakeLists.txt  package.xml
test_foot_pos/launch/: test_foot_pos.launch.py
test_foot_pos/src/: test_foot_pos_node.cpp  test_gait_node.cpp
(+8 files in other folders)
